# heroku_polls

./: db.sqlite3  pyproject.toml  requirements.txt  requirements_dev.txt
goat/: views.py
polls/: settings.py  urls.py
polls.egg-info/: PKG-INFO  SOURCES.txt
votes/: apps.py  urls.py  views.py
votes/migrations/: 0001_initial.py
