[tool.poetry]
name = "polls"
version = "0.1.0"
description = "using traditional App creation"
authors = ["Yuenfu Liu <liuyuenfu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.13"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
